2010-10-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt, win32/mingw.mak.template, win32/vc-libpqxx.mak.template,
 win32/vc-test.mak.template:
 - Use ws2_32, not wsock32.  Thanks Christian Freund.
 - Don't use /GX and /YX for test build, thanks Christian Freund.
 - Link in shell32.lib, secur32.lib, wldap32.lib, thanks Christian Freund.
2010-10-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for PQescapeLiteral (not used yet).
2010-10-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
 - std-qualified use of FILE; fixes #208.
 include/pqxx/transaction_base.hxx, test/test090.cxx,
 test/unit/test_escape.cxx:
 - Removed duplicate test coverage from test090.
 - Don't test exactly what esc() does; meant for use with quote().
 - Full roundtrip tests for quote(): less brittle for quoting changes.
2010-09-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/notify-listen.hxx:
 - Fixed mistaken implication in documentation, thanks Michael Krelin.
 src/connection_base.cxx:
 - Cosmetic.
2010-08-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, src/result.cxx:
 - Include approximate location of error in syntax_error.
2010-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Fixed some breakage with 9.0 hex-escaping support detection.
 test/test007.cxx:
 - "Affected rows" also works for SELECT in 9.0.
 test/test090.cxx:
 - Retired binary-escaping tests that don't apply to the hex format.
 test/unit/test_binarystring.cxx:
 - Check that binary-escaped string contains no "high bytes."
2010-08-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for PostgreSQL 9.0 hex binary-escaping format.
 src/binarystring.cxx:
 - Refactor unescaping.
 - Work around hex-format support in PQunescapeBytea.
2010-06-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, src/transaction_base.cxx,