@@ -1,4 +1,5 @@
 3.2
+ - Fixes binary-data escaping problems with postgres 9.0.
  - Fixes problems with binary-string handling and escaping.
  - Fixes compatibility problems between 9.x libpq and 7.x backend.
  - syntax_error reports error's approximate location in the query.
